# ApkSmith

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: gen_dev_keystore.sh  setup.ps1  setup.sh
src/apksmith/: __init__.py  cli.py  config.py  doctor.py  pipeline.py  result.py
src/apksmith/passes/: __init__.py  trace_logger.py
src/apksmith/resources/: .gitkeep  InlineLogs.smali
src/apksmith/smali/: __init__.py  parser.py  walker.py
src/apksmith/toolchain/: __init__.py  adb.py  tools.py
tests/: test_adb.py  test_placeholder.py
tests/e2e/: README.md  conftest.py  test_e2e_instrument.py
tests/e2e/fixtures/hello_app/: AndroidManifest.xml  build.sh
tests/e2e/fixtures/hello_app/src/main/java/com/apksmith/test/: MainActivity.java
